# sunset

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
src/assets/: asset_cmd.rs  asset_server.rs  mod.rs
src/core/: app.rs  cli.rs  command_queue.rs  default_apps.rs  events.rs  mod.rs  state.rs  util.rs
src/ecs/: camera_component.rs  mod.rs  model_component.rs  name_component.rs  text_component.rs  transform_component.rs  ui_component.rs  window_component.rs
src/gallery/: mod.rs  scene.rs  ui_handler.rs
src/renderer/: buffer.rs  mod.rs  pipeline.rs  primitive.rs  sun.rs  texture.rs
src/renderer/resources/: font.rs  image.rs  material.rs  mesh.rs  mod.rs  model.rs  rect.rs  texture.rs  texture_atlas.rs  texture_atlas_builder.rs
src/window/: mod.rs  windower.rs
sunset_renderer/: Cargo.toml
