[package]
name = "sunset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = { version = "0.3.29", features = ["thread-pool"] }
winit = { version = "0.29.2", features = ["rwh_05"] }
once_cell = "1.18.0"
wgpu = "0.18"
async-trait = "0.1.74"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
tracing-wasm = "0.2.1"
js-sys = "0.3.66"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.39"
wasm_thread = "0.2.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'WebSocket',
    'MessageEvent',
] }
