[package]
name = "sunset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = { version = "0.3.29", features = ["thread-pool", "executor"] }
winit = { version = "0.29.10", features = ["rwh_05"] }
once_cell = "1.18.0"
wgpu = { version = "0.19", features = ["webgpu", "webgl"] }
async-trait = "0.1.74"
pollster = "0.3.0"
cfg-if = "1.0.0"
async-std = "1.12.0"
web-time = "1.0.0"
bevy_ecs = "0.13.0"
bytemuck = "1.14.0"
image = "0.25.0"
anyhow = "1.0"
cgmath = "0.18.0"
gltf = "1.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.6.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

tokio = { version = "1.35.1", features = [
    "sync",
    "rt",
    "macros",
    "rt-multi-thread",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
tracing-wasm = "0.2.1"
js-sys = "0.3.66"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.39"
wasm_thread = "0.2.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'WebSocket',
    'MessageEvent',
    'ProgressEvent',
    'FileReader',
    'HtmlStyleElement'
] }
uuid = { version = "1.6.1", features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
    "js",
] }
